@@ -1,141 +1,89 @@
 package dev.langchain4j.store.embedding.azure.cosmos.nosql;
 
-import com.azure.cosmos.ConsistencyLevel;
-import com.azure.cosmos.CosmosClient;
-import com.azure.cosmos.CosmosClientBuilder;
-import com.azure.cosmos.models.*;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.condition.EnabledIfEnvironmentVariable;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.AssertionsForClassTypes.assertThatExceptionOfType;
 
-import java.util.ArrayList;
+import com.azure.cosmos.models.CosmosVectorDataType;
+import com.azure.cosmos.models.CosmosVectorDistanceFunction;
+import com.azure.cosmos.models.CosmosVectorEmbedding;
+import com.azure.cosmos.models.CosmosVectorEmbeddingPolicy;
+import com.azure.cosmos.models.CosmosVectorIndexSpec;
+import com.azure.cosmos.models.CosmosVectorIndexType;
+import com.azure.cosmos.models.IncludedPath;
+import com.azure.cosmos.models.IndexingMode;
+import com.azure.cosmos.models.IndexingPolicy;
 import java.util.Collections;
 import java.util.List;
-
-import static org.assertj.core.api.AssertionsForClassTypes.assertThatExceptionOfType;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.condition.EnabledIfEnvironmentVariable;
 
 @EnabledIfEnvironmentVariable(named = "AZURE_COSMOS_HOST", matches = ".+")
 @EnabledIfEnvironmentVariable(named = "AZURE_COSMOS_MASTER_KEY", matches = ".+")
 class AzureCosmosDbNoSqlEmbeddingStoreTest {
 
-    private static final String DATABASE_NAME = "test_db";
-    private static final String CONTAINER_NAME = "test_container";
+    private static final String DATABASE_NAME = "test_database_langchain_java";
+    private static final String CONTAINER_NAME = "test_embedding_container";
 
     @Test
-    void should_fail_if_cosmosClient_missing() {
+    void should_fail_if_endpoint_missing() {
         assertThatExceptionOfType(IllegalArgumentException.class).isThrownBy(() -> {
-            AzureCosmosDbNoSqlEmbeddingStore.builder()
-                    .cosmosClient(null)
-                    .build();
+            AzureCosmosDbNoSqlEmbeddingStore.builder().endpoint(null).build();
         });
     }
 
     @Test
-    void should_fail_if_databaseName_collectionName_missing() {
+    void should_fail_if_apiKey_tokenCredential_missing() {
 
-        CosmosClient cosmosClient = new CosmosClientBuilder()
-                .endpoint("HOST")
-                .key("MASTER_KEY")
-                .consistencyLevel(ConsistencyLevel.EVENTUAL)
-                .contentResponseOnWriteEnabled(true)
-                .buildClient();
+        assertThatExceptionOfType(NullPointerException.class)
+                .isThrownBy(() -> AzureCosmosDbNoSqlEmbeddingStore.builder()
+                        .endpoint(System.getenv("AZURE_COSMOS_HOST"))
+                        .apiKey(null)
+                        .build());
 
-        assertThatExceptionOfType(IllegalArgumentException.class).isThrownBy(() -> AzureCosmosDbNoSqlEmbeddingStore.builder()
-                .cosmosClient(cosmosClient)
-                .databaseName(null)
-                .build());
-
-        assertThatExceptionOfType(IllegalArgumentException.class).isThrownBy(() -> AzureCosmosDbNoSqlEmbeddingStore.builder()
-                .cosmosClient(cosmosClient)
-                .databaseName("")
-                .build());
-
-        assertThatExceptionOfType(IllegalArgumentException.class).isThrownBy(() -> AzureCosmosDbNoSqlEmbeddingStore.builder()
-                .cosmosClient(cosmosClient)
-                .databaseName("test_database")
-                .containerName(null)
-                .build());
-
-        assertThatExceptionOfType(IllegalArgumentException.class).isThrownBy(() -> AzureCosmosDbNoSqlEmbeddingStore.builder()
-                .cosmosClient(cosmosClient)
-                .databaseName("test_database")
-                .containerName("")
-                .build());
+        assertThatExceptionOfType(IllegalArgumentException.class)
+                .isThrownBy(() -> AzureCosmosDbNoSqlEmbeddingStore.builder()
+                        .endpoint(System.getenv("AZURE_COSMOS_HOST"))
+                        .tokenCredential(null)
+                        .build());
     }
 
     @Test
-    void should_fail_if_cosmosVectorEmbeddingPolicy_missing() {
-        CosmosClient cosmosClient = new CosmosClientBuilder()
-                .endpoint("HOST")
-                .key("MASTER_KEY")
-                .consistencyLevel(ConsistencyLevel.EVENTUAL)
-                .contentResponseOnWriteEnabled(true)
-                .buildClient();
-
-        CosmosVectorEmbeddingPolicy cosmosVectorEmbeddingPolicy = new CosmosVectorEmbeddingPolicy();
-
-        assertThatExceptionOfType(IllegalArgumentException.class).isThrownBy(() -> AzureCosmosDbNoSqlEmbeddingStore.builder()
-                .cosmosClient(cosmosClient)
+    void should_build_successfully_with_valid_parameters() {
+        AzureCosmosDbNoSqlEmbeddingStore store = AzureCosmosDbNoSqlEmbeddingStore.builder()
+                .endpoint(System.getenv("AZURE_COSMOS_HOST"))
+                .apiKey(System.getenv("AZURE_COSMOS_MASTER_KEY"))
                 .databaseName(DATABASE_NAME)
                 .containerName(CONTAINER_NAME)
-                .cosmosVectorEmbeddingPolicy(null)
-                .build());
+                .searchQueryType(AzureCosmosDBSearchQueryType.VECTOR)
+                .indexingPolicy(getIndexingPolicy())
+                .cosmosVectorEmbeddingPolicy(getCosmosVectorEmbeddingPolicy())
+                .build();
 
-
-        cosmosVectorEmbeddingPolicy.setCosmosVectorEmbeddings(null);
-        assertThatExceptionOfType(IllegalArgumentException.class).isThrownBy(() -> AzureCosmosDbNoSqlEmbeddingStore.builder()
-                .cosmosClient(cosmosClient)
-                .databaseName(DATABASE_NAME)
-                .containerName(CONTAINER_NAME)
-                .cosmosVectorEmbeddingPolicy(cosmosVectorEmbeddingPolicy)
-                .build());
-
-        cosmosVectorEmbeddingPolicy.setCosmosVectorEmbeddings(new ArrayList<>());
-        assertThatExceptionOfType(IllegalArgumentException.class).isThrownBy(() -> AzureCosmosDbNoSqlEmbeddingStore.builder()
-                .cosmosClient(cosmosClient)
-                .databaseName(DATABASE_NAME)
-                .containerName(CONTAINER_NAME)
-                .cosmosVectorEmbeddingPolicy(cosmosVectorEmbeddingPolicy)
-                .build());
+        assertThat(store).isNotNull();
     }
 
-    @Test
-    void should_fail_if_cosmosVectorIndexes_missing() {
-        CosmosClient cosmosClient = new CosmosClientBuilder()
-                .endpoint("HOST")
-                .key("MASTER_KEY")
-                .consistencyLevel(ConsistencyLevel.EVENTUAL)
-                .contentResponseOnWriteEnabled(true)
-                .buildClient();
+    private IndexingPolicy getIndexingPolicy() {
+        IndexingPolicy indexingPolicy = new IndexingPolicy();
+        indexingPolicy.setIndexingMode(IndexingMode.CONSISTENT);
+        IncludedPath includedPath = new IncludedPath("/*");
+        indexingPolicy.setIncludedPaths(Collections.singletonList(includedPath));
 
-        CosmosVectorEmbeddingPolicy cosmosVectorEmbeddingPolicy = populateCosmosVectorEmbeddingPolicy();
+        CosmosVectorIndexSpec cosmosVectorIndexSpec = new CosmosVectorIndexSpec();
+        cosmosVectorIndexSpec.setPath("/embedding");
+        cosmosVectorIndexSpec.setType(CosmosVectorIndexType.DISK_ANN.toString());
+        indexingPolicy.setVectorIndexes(Collections.singletonList(cosmosVectorIndexSpec));
 
-        assertThatExceptionOfType(IllegalArgumentException.class).isThrownBy(() -> AzureCosmosDbNoSqlEmbeddingStore.builder()
-                .cosmosClient(cosmosClient)
-                .databaseName(DATABASE_NAME)
-                .containerName(CONTAINER_NAME)
-                .cosmosVectorEmbeddingPolicy(cosmosVectorEmbeddingPolicy)
-                .cosmosVectorIndexes(null)
-                .build());
-
-        List<CosmosVectorIndexSpec> cosmosVectorIndexes = new ArrayList<CosmosVectorIndexSpec>();
-        assertThatExceptionOfType(IllegalArgumentException.class).isThrownBy(() -> AzureCosmosDbNoSqlEmbeddingStore.builder()
-                .cosmosClient(cosmosClient)
-                .databaseName(DATABASE_NAME)
-                .containerName(CONTAINER_NAME)
-                .cosmosVectorEmbeddingPolicy(cosmosVectorEmbeddingPolicy)
-                .cosmosVectorIndexes(cosmosVectorIndexes)
-                .build());
+        return indexingPolicy;
     }
 
-    private CosmosVectorEmbeddingPolicy populateCosmosVectorEmbeddingPolicy() {
-        CosmosVectorEmbeddingPolicy policy = new CosmosVectorEmbeddingPolicy();
-        CosmosVectorEmbedding embedding1 = new CosmosVectorEmbedding();
-        embedding1.setPath("/embedding");
-        embedding1.setDataType(CosmosVectorDataType.FLOAT32);
-        embedding1.setDimensions(128L);
-        embedding1.setDistanceFunction(CosmosVectorDistanceFunction.COSINE);
-        policy.setCosmosVectorEmbeddings(Collections.singletonList(embedding1));
-        return policy;
+    private CosmosVectorEmbeddingPolicy getCosmosVectorEmbeddingPolicy() {
+        CosmosVectorEmbeddingPolicy vectorEmbeddingPolicy = new CosmosVectorEmbeddingPolicy();
+        CosmosVectorEmbedding embedding = new CosmosVectorEmbedding();
+        embedding.setPath("/embedding");
+        embedding.setDataType(CosmosVectorDataType.FLOAT32);
+        embedding.setEmbeddingDimensions(1536);
+        embedding.setDistanceFunction(CosmosVectorDistanceFunction.COSINE);
+        vectorEmbeddingPolicy.setCosmosVectorEmbeddings(List.of(embedding));
+        return vectorEmbeddingPolicy;
     }
-
 }
